# godot-agent

./: AGENTS.md  CLAUDE.md  README.md  conftest.py  minimax.json  pyproject.toml  pytest.ini
.github/workflows/: godot-agent-ci.yml
docs/: DEVELOPMENT_PLAN.md  README.md  REQ.md  REQS_GAP.md  godot-architecture.md  godot-assets-cli.md  godot-gdscript-design.md
docs/gaps/: GAPS.md
docs/test/: RESULTS.md  TEST_SNAKE.md
examples/simple_platformer/: README.md  project.godot
examples/simple_platformer/gdd/stories/: story-001-player-movement.md
examples/simple_platformer/scenes/: level_01.tscn
examples/simple_platformer/scripts/: player.gd
examples/simple_platformer/scripts/autoload/: event_bus.gd
gdd/: index.md
gdd/assets/: style-guide.md
gdd/mechanics/: combat.md
godot_agent/: __init__.py  __main__.py
godot_agent/assets/: __init__.py  __init__.py.bak  generator.py
godot_agent/bridge/: registry.py  tools.py
godot_agent/cli/: __init__.py  __main__.py  main.py
godot_agent/config/: __init__.py
godot_agent/export/: __init__.py
godot_agent/gdd/: __init__.py
godot_agent/godogen/: __init__.py
godot_agent/inspector/: project.py
godot_agent/lsp/: __init__.py
godot_agent/scene/: __init__.py
godot_agent/templates/gdscript/: autoload.gd  character_body_2d.gd  component.gd  test_gut.gd
godot_agent/templates/scene/: character_2d.tscn
godot_agent/workflow/: llm.py  real_llm.py  validate.py
nanobot/: pyproject.toml
scripts/: godot_agent_cli.py
skills/godogen/: animation_tree.yaml  input_map.yaml
test_snake/gdd/: story-001.md
test_snake/scripts/: snake.gd
test_snake_final/: test_report.md
test_snake_final/scenes/: game.tscn
test_snake_v2/scripts/: snake.gd
test_special_snake/gdd/: game.md
test_special_snake/scenes/: snake.tscn
test_special_snake/scripts/: snake.gd
tests/: conftest.py  test_assets.py  test_gdd.py  test_generator.py  test_godogen.py  test_harness.py  test_inspector.py  test_lsp.py
tests_output/snake_special/gdd/: game.md
tests_output/snake_special/scripts/: snake.gd
work/einstein/input/: task.md
work/einstein/output/: DONE.md  tests.md
