[project]
name = "godot-agent-workspace"
version = "0.1.0"
description = "Godot Agent workspace — nanobot fork + Godot 4.x extensions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# This is a workspace root. Install both nanobot and godot-agent:
#   pip install -e ./nanobot
#   pip install -e ./packages/godot-agent
#
# Or install the workspace in one go (requires pip >= 21.1):
#   pip install -e ./nanobot -e ./packages/godot-agent

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Root is not installable as a wheel; use sub-packages

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
