[project]
name = "nanobot-ai"
version = "0.1.5.post3"
description = "A lightweight AI agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HKUDS"},
]
keywords = ["ai", "agent", "llm", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "loguru>=0.7.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pyyaml>=6.0,<7.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "typer>=0.20.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "croniter>=2.0.0,<3.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "websockets>=12.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
]

[project.scripts]
nanobot = "nanobot.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/**/*.yaml",
    "nanobot/**/*.md",
    "nanobot/**/*.html",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
